# AIfES_for_Arduino

./: .gitmodules  SConscript  library.properties
examples/5_M5_Stick_C_Plus_2_ESP32/0_Flower_AIfES_MQTT/: 0_Flower_AIfES_MQTT.ino  README.md  aifes_f32_fnn.h  fl_comm_mqtt.h  fl_server_mqtt.py  pyproject.toml
examples/6_MNIST_Dataset/MNIST_Training_2D_CNN_F32/: MNIST_Training_2D_CNN_F32.ino
examples/6_MNIST_Dataset/MNIST_Training_FC_10_50_F32/: MNIST_Training_FC_10_50_F32.ino
examples/6_MNIST_Dataset/MNIST_Training_FC_10x10_F32/: MNIST_Training_FC_10x10_F32.ino
examples/6_MNIST_Dataset/MNIST_Training_FC_1_10_F32/: MNIST_Training_FC_1_10_F32.ino
examples/MNIST_Training_F32/: MNIST_Training_F32.ino
src/: CMakeLists.txt
src/basic/base/: CMakeLists.txt
src/basic/default/: CMakeLists.txt
src/basic/express/: CMakeLists.txt
src/cnn/: CMakeLists.txt
